# mrc2movie

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mrc2movie.py  mrc2movie_onefile.py  mrc2png.py  mrc_utils.py  mrc_viewer.py  pyoxidizer.bzl  pyproject.toml
.github/workflows/: build.yml
docs/: index.html  mrc2movie.html  mrc2png.html  mrc_utils.html  search.js
tests/: test_mrc_utils.py
