[project]
name = "mrc2png_and_movie"
version = "0.1.0"
description = "A tool for converting MRC files to movie formats and image sequences"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mrcfile>=1.5.3",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.4",
    "pre-commit>=3.7.0",
    "pdoc>=14.2.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

ignore = []

[project.urls]
Homepage = "https://github.com/elemeng/mrc2movie"
Documentation = "https://github.com/elemeng/mrc2movie#readme"

[tool.uv]
pip-version = "24.3.1"

[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv"
