[project]
name = "mrc2png_and_movie"
version = "0.1.0"
description = "A tool for converting MRC files to movie formats and image sequences"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mrcfile>=1.5.3",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "tqdm>=4.67.1",
]

