[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrc2movie"
version = "0.1.0"
description = "High-performance MRC tomogram to movie converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mrcfile>=1.5.4",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mrc2movie = "mrc2movie:main"
mrc2png = "mrc2png:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
exclude = ["tests*"]
